--- a/views/recipePage.handlebars
+++ b/views/recipePage.handlebars
@@ -27,34 +27,23 @@
   <!-- recipe toolbar -->
 <div class = "middle_section">
   <div class="recipe-toolbar-container">
-    <nav class="recipe-navbar">
-      <ul class="recipe-navlist">
-        <li class="recipe-navitem">
+        <div class="recipe-navitem">
           <span class="recipe-navbar-icon" id="bookmark-icon"></span>
-          <span>Bookmark</span>
-        </li>
-        <li class="recipe-navitem">
+          <img src = "https://cdn4.iconfinder.com/data/icons/web-ui-ux/32/072-Bookmark-512.png">
           <span class="recipe-navbar-icon" id="print-icon"></span>
-          <span>Print</span>
-        </li>
-        <li class="recipe-navitem">
+            <img src = "https://static.thenounproject.com/png/113154-200.png">
+
           <span class="recipe-navbar-icon" id="copyURL-icon"></span>
-          <span>Copy URL</span>
-        </li>
-        <li class="recipe-navitem">
+            <img src = "https://user-images.githubusercontent.com/5275463/39963538-bcf0e6e0-5622-11e8-8731-50b28062154b.png">
+
           <span class="recipe-navbar-icon" id="googleDrive-icon"></span>
-          <span>Google Drive</span>
-        </li>
-        <li class="recipe-navitem">
+          <img src="https://cdn.vox-cdn.com/thumbor/Pkmq1nm3skO0-j693JTMd7RL0Zk=/0x0:2012x1341/1200x800/filters:focal(0x0:2012x1341)/cdn.vox-cdn.com/uploads/chorus_image/image/47070706/google2.0.0.jpg"alt="Google">
           <span class="recipe-navbar-icon" id="instagram-icon"></span>
-          <span>Instagram</span>
-        </li>
-        <li class="recipe-navitem">
+          <img src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSe0OENLlY_Cdivjga4Hnl3EVpfsuGybbZuzboQ6UCLpgykjB0d&s">
+
           <span class="recipe-navbar-icon" id="Facebook-icon"></span>
-          <span>Facebook</span>
-        </li>
-      </ul>
-    </nav>
+          <img src="https://imageog.flaticon.com/icons/png/512/124/124010.png?size=1200x630f&pad=10,10,10,10&ext=png&bg=FFFFFFFF">
+        </div>
   </div>
 </div>
 
@@ -62,8 +51,8 @@
   <!-- directions -->
 <div class="bottom_section">
   <div class="recipe-directions-container">
-    <span class="directions-title">directions</span>
-    <div class="directions-element">
+    <span class="directions-title">Directions</span>
+  <div class="directions-element">
       <div class="directions-checklist">
         <button type="button" id="minus-direction" class="fas fa-minus-circle"></button>
         <span>Stir cucumber pieces with 1/4 cup gochujang paste in a bowl; set aside.</span>
