--- a/public/style.css
+++ b/public/style.css
@@ -520,32 +520,36 @@ a {
   outline: none;
   margin: 6px;
   padding: 10px;
+  float: left;
 }
 
 .recipe-name {
   font-size: 43px;
+
 }
 
+.ingredients-title {
+  font-size: 26px;
+  width: 100%;
+  margin-left: 10px;
+  float: left;
+}
 .recipe-ingredients-container {
   width: 50%;
   padding: 10px;
   float: left;
 }
-
-.ingredients-title {
-  font-size: 26px;
-}
-
 .recipe-image-container {
-  width: 40%;
+  width: 50%;
   padding: 4px;
   float: left;
 
 }
 /* control the img container */
 .recipe-image-container img{
-  max-width: 500px;
-  max-height: 500px;
+  width: 500px;
+  height: 500px;
+  flex-wrap: wrap;
 }
 
 
@@ -568,19 +572,20 @@ a {
 }
 .recipe-toolbar-container {
   width: auto;
+  align-items: center;
 }
 .recipe-navitem {
 
-  background-color: yellow;
-  text-align: center;
-  margin-left: 50px;
+  align-items: center;
   position: block;
   float: left;
-
 }
-
-
-
+.recipe-navitem img {
+  width: 40px;
+  max-height: 50px;
+  margin-left:  100px;
+  float: left;
+}
 
 
 
@@ -595,8 +600,11 @@ a {
 .bottom_section{
   max-width: 100%;
   float: left;
-
 }
+.directions-title{
+  font-size: 26px;
+}
+
 
 
 #minus-direction,
