Created few functions to bookmark and delete

--- a/views/partials/item.handlebars
+++ b/views/partials/item.handlebars
@@ -1,4 +1,4 @@
-<div class="item" data-bookmark="{{BOOKMARK}}" data-categories="{{CATEGORIES}}" data-ingredients="{{INGREDIENTS}}">
+<div class="item" data-bookmark="{{BOOKMARK}}" data-categories="{{CATEGORIES}}" data-ingredients="{{INGREDIENTS}}" data-caption="{{CAPTION}}">
     <div class="item-contents">
         <div class="item-image-container">
             <a href="{{CAPTION}}"><img src="{{IMG_URL}}" alt="{{CAPTION}}"></a>
