--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,8 +17,8 @@
   <body>
     <header>
       <h1 class="site-title">
-        <a href="#" id="title-goBeav">GoBeav</a>
-        <a href="#" id="title-recipes">RECIPES</a>
+        <a href="/" id="title-goBeav">GoBeav</a>
+        <a href="/" id="title-recipes">RECIPES</a>
       </h1>
     </header>
 
