--- a/views/partials/searchbar.handlebars
+++ b/views/partials/searchbar.handlebars
@@ -8,8 +8,7 @@
     <div class="searchbox">
         <div class="header">
         <input onkeyup="searchbox_filter()" type="text" id="value" placeholder="Find a recipe..">
-        <button onclick="openNav()" id="filter-button"><i class="fas fa-bars"></i></button>
-        <a href="javascript:void(0)" id="filter-button" onclick="closeNav()">&times;</a>
+        <button type="button" id="openNavButton" class="fas fa-bars"></button>
 
         </div>
         <!-- <div class="container">
@@ -35,7 +34,7 @@
 <!--Filter Search Bar-->
 <aside class="filter-container">
 
-  <div id="mySidenav" class="sidenav">
+  <div id="mySidenav" class="closed">
 
     <div class="filter-input-container">
         <button type="button" id="bookmark-button"><i class="fas fa-star"></i></button>
