--- a/public/style.css
+++ b/public/style.css
@@ -44,7 +44,7 @@ body {
 
 }
 .header{
-  background: #FF8000;
+  background: #d73f09;
   /* overflow: hidden; */
   padding-left: 30%;
   text-align: center;
@@ -57,7 +57,7 @@ body {
   border-color: #FFFFFF;
   border-style: solid;
   border-width: thick;
-  background: #FF8000;
+  background: #d73f09;
   padding: 6px 6px 6px 12px;
   font-size: 20px;
   width: 58%;
@@ -101,69 +101,65 @@ body {
 }
 
 /* The navigation menu links */
-.filter-container a {
-
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
-}
-
-/* When you mouse over the navigation links, change their color */
-.sidenav a:hover {
-  color: #f1f1f1;
-}
 
 /* Position and style the close button (top right corner) */
 
 
 /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
-#main {
-  transition: margin-left .5s;
-  padding: 20px;
-}
-
-/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-@media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
-}
 /*67567657567575*/
 
  aside {
-  background: #FF8000;
+  background: #d73f09;
   text-align: center;
   display: flex;
   align-items: center;
   position: relative;
   left: 0;
-  padding-bottom: 30px;
-  width: auto;
+  width: 100%;
 }
+
+
+#panel, #flip {
+  padding: 25px;
+  text-align: center;
+  margin: none;
+  background-color: none;
+  border: none;
+}
+#panel {
+  width: 100%;
+  padding:none;
+  display: none;
+}
+
+
 #bookmark-button {
   width: 5%;
-  margin-right: 5%;
   border: 0;
   outline: 0;
+  margin-left: 20%;
   font-size: 30px;
-  background-color: #FF8000;
+  background-color: #d73f09;
   color: #FFFF00;
   cursor: pointer;
   float: left;
 }
 #bookmark-button:hover {
-  color: #FFFF99;
+  color: #FFF999;
 }
+
+
 #filter-categories {
   width: 20%;
-  margin-right: 5%;
+  margin-left: 5%;
   height: 30px;
 
   float: left;
 }
 #filter-text-ingredients {
-  width: 40%;
+  width: 30%;
+  margin-left: 5%;
+
   height: 30px;
   float: left;
 }
