--- a/views/partials/searchbar.handlebars
+++ b/views/partials/searchbar.handlebars
@@ -8,22 +8,21 @@
     <div class="searchbox">
         <div class="header">
         <input onkeyup="searchbox_filter()" type="text" id="value" placeholder="Find a recipe..">
-        <button type="button" id="openNavButton" class="fas fa-bars"></button>
+        <button type="button" id="flip" class="fas fa-bars"></button>
+
+        <!-- MOVING funiction -->
+<script>
+        $(document).ready(function(){
+        $("#flip").click(function(){
+          $("#panel").slideToggle("slow");
+        });
+      });
+</script>
+    <!-- DO NOT MOVE IN THE JS -->
+
 
         </div>
-        <!-- <div class="container">
-
-                <div class="item">
-                <span class="icon">A</span>
-                <span class="name">Apple</span>
-                </div>
-            </div> -->
-
-
-        <!-- need it fill with photo container? -->
     </div>
-<!-- dynamic search bar end here -->
-
 </form>
 
 
@@ -34,7 +33,7 @@
 <!--Filter Search Bar-->
 <aside class="filter-container">
 
-  <div id="mySidenav" class="closed">
+  <div id="panel" class="closed">
 
     <div class="filter-input-container">
         <button type="button" id="bookmark-button"><i class="fas fa-star"></i></button>
