--- a/public/style.css
+++ b/public/style.css
@@ -153,16 +153,26 @@ body {
   width: 20%;
   margin-left: 5%;
   height: 30px;
-
+  background: transparent;
+  color: #fff;
+  display: inline;
   float: left;
 }
 #filter-text-ingredients {
+
   width: 30%;
   margin-left: 5%;
-
+  background: transparent;
+  color: #fff;
+  display: inline;
   height: 30px;
   float: left;
 }
+
+input#filter-text-ingredients.filter-input {
+  color: white;
+}
+
 
 .container{
   background: #FFFFF5;
