Bookmark filter works

--- a/public/style.css
+++ b/public/style.css
@@ -133,7 +133,7 @@ body {
 }
 
 
-#bookmark-button {
+#bookmark-filter-button {
   width: 5%;
   border: 0;
   outline: 0;
@@ -144,7 +144,7 @@ body {
   cursor: pointer;
   float: left;
 }
-#bookmark-button:hover {
+#bookmark-filter-button:hover {
   color: #FFF999;
 }
 
