--- a/views/partials/searchbar.handlebars
+++ b/views/partials/searchbar.handlebars
@@ -35,7 +35,7 @@
   <div id="panel" class="closed">
 
     <div class="filter-input-container">
-        <button type="button" id="bookmark-button"><i class="fas fa-star"></i></button>
+        <button type="button" id="bookmark-filter-button" class="fa-star far"></button>
     </div>
     <div class="filter-input-container">
         <div class="filter-input-element">
