Added filter using categories, and bug fixed bookmark search

--- a/views/partials/searchbar.handlebars
+++ b/views/partials/searchbar.handlebars
@@ -40,7 +40,7 @@
     <div class="filter-input-container">
         <div class="filter-input-element">
         <select id="filter-categories" class="filter-input" name="filter-categories">
-            <option selected value="">Any</option>
+            <option>Any</option>
             <option>Asian</option>
             <option>American</option>
             <option>Italian</option>
