--- a/views/partials/searchbar.handlebars
+++ b/views/partials/searchbar.handlebars
@@ -36,6 +36,10 @@
 
     <div class="filter-input-container">
         <button type="button" id="bookmark-button"><i class="fas fa-star"></i></button>
+
+        <!-- book mark -->
+
+
     </div>
     <div class="filter-input-container">
         <div class="filter-input-element">
