--- a/views/recipePage.handlebars
+++ b/views/recipePage.handlebars
@@ -6,6 +6,7 @@
   <!-- ingredients -->
   <!-- adding body recipe HY-->
   <div class="body_recipe">
+    <!-- Added Ingredients Check Listing -->
     <span class="ingredients-title">Ingredients</span>
     <div class="recipe-ingredients-container">
       <div class="ingredients-element">
@@ -19,7 +20,7 @@
 
           <ul id="myUL">
             <li>Carrots</li>
-            <li class="checked">Pay bills</li>
+            <li class="checked">Milk 12 pounds</li>
             <li>Cake</li>
             <li>Shrimp</li>
             <li>Banana</li>
