--- a/views/recipePage.handlebars
+++ b/views/recipePage.handlebars
@@ -69,8 +69,41 @@
   <div class="bottom_section">
     <div class="recipe-directions-container">
       <span class="directions-title">Directions</span>
+
       <div class="directions-element">
         <div class="directions-checklist">
+
+
+
+<!--  Direction part of input -->
+
+
+
+<div id="direction_div" class="direction_header">
+  <h2>Direction</h2>
+  <input type="text" id="direction_Input" placeholder="Title...">
+  <span id="direction_span" onclick"direction_newElement()" class="direction_addBtn">Add</span>
+</div>
+
+<ul id="direction_UL">
+  <li id="direction_li">hhh</li>
+  <li id="direction_li" class="direction_checked">Pay bills</li>
+</ul>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
           <button type="button" id="minus-direction" class="fas fa-minus-circle"></button>
           <span>Stir cucumber pieces with 1/4 cup gochujang paste in a bowl; set aside.</span>
           <button type="button" id="plus-direction" class="fas fa-plus-circle"></button>
