--- a/views/recipePage.handlebars
+++ b/views/recipePage.handlebars
@@ -82,7 +82,7 @@
 <div id="direction_div" class="direction_header">
   <h2>Direction</h2>
   <input type="text" id="direction_Input" placeholder="Title...">
-  <span id="direction_span" onclick"direction_newElement()" class="direction_addBtn">Add</span>
+  <span id="direction_span" onclick="direction_newElement()" class="direction_addBtn">Add</span>
 </div>
 
 <ul id="direction_UL">
