--- a/public/style.css
+++ b/public/style.css
@@ -531,7 +531,7 @@ a {
 
 .recipe-ingredients-container {
   width: 50%;
-  padding: 10px;
+  padding: 10px 10px 10px 0;
   float: left;
 }
 
@@ -648,16 +648,17 @@ ul li.checked::before {
 
 /* Style the header */
 
-.header {
+#myDIV {
   background-color: #d73f09;
   padding: 30px 40px;
   color: white;
-  text-align: center;
+  text-align: left;
+  display: block;
 }
 
 /* Clear floats after the header */
 
-.header:after {
+#myDIV:after {
   content: "";
   display: table;
   clear: both;
@@ -670,6 +671,7 @@ input {
   border: none;
   border-radius: 0;
   width: 75%;
+  height: 45%;
   padding: 10px;
   float: left;
   font-size: 16px;
@@ -680,6 +682,7 @@ input {
 .addBtn {
   padding: 10px;
   width: 25%;
+  height: 45%;
   background: #d9d9d9;
   color: #555;
   float: left;
@@ -697,33 +700,39 @@ input {
 /* middle secion will start */
 
 .middle_section {
-  width: 100%;
+  /* width: 100%; */
+  width: 108%;
   float: left;
+  margin-top: 30px;
 }
 
 .recipe-toolbar-container {
-  width: auto;
-  align-items: center;
+  /* width: auto; */
+  /* align-items: center; */
 }
 
 .recipe-navitem {
-  align-items: center;
+  width: 16%;
+  height: 50px;
+  font-size: 15px;
+  color: #FFFFFF;
+  text-align: center;
   position: block;
   float: left;
+  background-color: #d73f09;
+  margin: 2.5px;
+  line-height: 50px;
 }
 
-.recipe-navitem img {
-  width: 40px;
-  max-height: 50px;
-  margin-left: 100px;
-  float: left;
+.recipe-navbar-icon {
+  font-size: 25px;
 }
 
 /* Bottom section will start */
 
 .bottom_section {
-  margin-top: 10px;
-  width: 95%;
+  margin-top: 30px;
+  width: 106.8%;
   float: left;
 }
 
@@ -810,10 +819,11 @@ input {
 /* Style the header */
 
 .direction_header {
-  background-color: #f44336;
+  background-color: #d73f09;
   padding: 30px 40px;
   color: white;
-  text-align: center;
+  text-align: left;
+  display: block;
 }
 
 /* Clear floats after the header */
@@ -828,10 +838,10 @@ input {
 
 #direction_Input {
   margin: 0;
-  height: 100%;
   border: none;
   border-radius: 0;
   width: 90%;
+  height: 45%;
   padding: 10px;
   float: left;
   font-size: 16px;
@@ -841,8 +851,8 @@ input {
 
 .direction_addBtn {
   padding: 10px;
-  height: 100%;
   width: 10%;
+  height: 45%;
   background: #d9d9d9;
   color: #555;
   float: left;
