--- a/views/recipePage.handlebars
+++ b/views/recipePage.handlebars
@@ -38,25 +38,28 @@
   <div class="middle_section">
     <div class="recipe-toolbar-container">
       <div class="recipe-navitem">
-        <span class="recipe-navbar-icon" id="bookmark-icon"></span>
-        <img src="https://cdn4.iconfinder.com/data/icons/web-ui-ux/32/072-Bookmark-512.png">
-        <span class="recipe-navbar-icon" id="print-icon"></span>
-        <img src="https://static.thenounproject.com/png/113154-200.png">
-
-        <span class="recipe-navbar-icon" id="copyURL-icon"></span>
-        <img src="https://user-images.githubusercontent.com/5275463/39963538-bcf0e6e0-5622-11e8-8731-50b28062154b.png">
-
-        <span class="recipe-navbar-icon" id="googleDrive-icon"></span>
-        <img
-          src="https://cdn.vox-cdn.com/thumbor/Pkmq1nm3skO0-j693JTMd7RL0Zk=/0x0:2012x1341/1200x800/filters:focal(0x0:2012x1341)/cdn.vox-cdn.com/uploads/chorus_image/image/47070706/google2.0.0.jpg"
-          alt="Google">
-        <span class="recipe-navbar-icon" id="instagram-icon"></span>
-        <img
-          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSe0OENLlY_Cdivjga4Hnl3EVpfsuGybbZuzboQ6UCLpgykjB0d&s">
-
-        <span class="recipe-navbar-icon" id="Facebook-icon"></span>
-        <img
-          src="https://imageog.flaticon.com/icons/png/512/124/124010.png?size=1200x630f&pad=10,10,10,10&ext=png&bg=FFFFFFFF">
+        <span class="recipe-navbar-icon" id="bookmark-icon"><i class="far fa-bookmark"></i></span>
+        <span class="nav-text">Bookmark</span>
+      </div>
+      <div class="recipe-navitem">
+        <span class="recipe-navbar-icon" id="print-icon"><i class="fas fa-print"></i></span>
+        <span class="nav-text">Print</span>
+      </div>
+      <div class="recipe-navitem">
+        <span class="recipe-navbar-icon" id="copyURL-icon"><i class="far fa-copy"></i></span>
+        <span class="nav-text">CopyURL</span>
+      </div>
+      <div class="recipe-navitem">
+        <span class="recipe-navbar-icon" id="googleDrive-icon"><i class="fab fa-google-drive"></i></span>
+        <span class="nav-text">GoogleDrive</span>
+      </div>
+      <div class="recipe-navitem">
+        <span class="recipe-navbar-icon" id="instagram-icon"><i class="fab fa-instagram"></i></span>
+        <span class="nav-text">Instagram</span>
+      </div>
+      <div class="recipe-navitem">
+        <span class="recipe-navbar-icon" id="facebook-icon"><i class="fab fa-facebook-square"></i></span>
+        <span class="nav-text">Facebook</span>
       </div>
     </div>
   </div>
