--- a/public/style.css
+++ b/public/style.css
@@ -153,10 +153,10 @@ aside {
 }
 
 #panel {
-  position: relative;
-  width: 100%;
+  width: 38%;
   padding: 5px;
   bottom: 20px;
+  left: 30%;
   display: none;
 }
 
@@ -164,7 +164,7 @@ aside {
   width: 3%;
   border: 0;
   outline: 0;
-  margin-left: 33%;
+  margin-left: 25%;
   font-size: 30px;
   background-color: #d73f09;
   color: #FFFF00;
@@ -174,13 +174,12 @@ aside {
 }
 
 #bookmark-filter-button:hover {
-  /* color: #FFF999; */
   color: #FFFF99;
 }
 
 #filter-categories {
-  width: 16%;
-  margin-left: 2%;
+  width: 180px;
+  margin-left: 13%;
   height: 30px;
   background: transparent;
   background-color: white;
@@ -659,6 +658,7 @@ ul li.checked::before {
   color: white;
   text-align: left;
   display: block;
+
 }
 
 /* Clear floats after the header */
@@ -680,6 +680,10 @@ input {
   padding: 10px;
   float: left;
   font-size: 16px;
+}
+
+#myUL {
+  word-break: break-all;
 }
 
 /* Style the "Add" button */
@@ -705,8 +709,8 @@ input {
 /* middle secion will start */
 
 .middle_section {
-  /* width: 100%; */
-  width: 71.6%;
+  width: 81.5%;
+  /* width: 71.6%; */
   float: left;
   margin-top: 30px;
   margin-left: 15%;
@@ -741,7 +745,7 @@ input {
 .bottom_section {
   margin-top: 30px;
   margin-left: 15%;
-  width: 70.4%;
+  width: 80.4%;
   float: left;
 
 }
